@@ -1,3 +1,14 @@
+2021-04-13  Devin Rousso  <drousso@apple.com>
+
+        [iOS] Only use the theme color if it's valid when `UseThemeColorForScrollAreaBackgroundColor` is enabled
+        https://bugs.webkit.org/show_bug.cgi?id=224455
+
+        Reviewed by Wenson Hsieh.
+
+        * TestWebKitAPI/Tests/WebKitCocoa/HTMLMetaThemeColor.mm:
+        (createWebView): Added.
+        (TEST.HTMLMetaThemeColor.ExperimentalUseThemeColorForScrollAreaBackgroundColor): Added.
+
 2021-04-12  Simon Fraser  <simon.fraser@apple.com>
 
         REGRESSION (r275792): [ iOS wk2 ] TestWebKitAPI.IndexedDB.DatabaseProcessKill is a flakey timeout
