@@ -1,3 +1,15 @@
+2021-04-13  Devin Rousso  <drousso@apple.com>
+
+        [iOS] Only use the theme color if it's valid when `UseThemeColorForScrollAreaBackgroundColor` is enabled
+        https://bugs.webkit.org/show_bug.cgi?id=224455
+
+        Reviewed by Wenson Hsieh.
+
+        Without a check for `isValid()`, the `m_themeColor` would always be used, even if not set.
+
+        * UIProcess/WebPageProxy.cpp:
+        (WebKit::WebPageProxy::scrollAreaBackgroundColor const):
+
 2021-04-13  Chris Dumez  <cdumez@apple.com>
 
         Fix typo in GPUProcessConnection::enableVP9Decoders()
